@@ -45,14 +45,6 @@ else:
         return text
 
 
-class _SpoofOutSphinx(doctest._SpoofOut):
-    # override: convert console encoding to unicode
-    if PY2:
-        def getvalue(self):
-            result = doctest._SpoofOut.getvalue(self)
-            return result.decode('string_escape')
-
-
 # set up the necessary directives
 
 class TestDirective(Directive):
@@ -184,11 +176,6 @@ class TestCode(object):
 
 
 class SphinxDocTestRunner(doctest.DocTestRunner):
-    def __init__(self, *args, **kw):
-        doctest.DocTestRunner.__init__(self, *args, **kw)
-        # Override a fake output target for capturing doctest output.
-        self._fakeout = _SpoofOutSphinx()
-
     def summarize(self, out, verbose=None):
         string_io = StringIO()
         old_stdout = sys.stdout
